[gd_scene load_steps=5 format=3 uid="uid://byjou0ej56xjj"]

[ext_resource type="Texture2D" uid="uid://c1vfb8rcegnet" path="res://images/Buttoning/upgrade base.png" id="1_idpkr"]
[ext_resource type="Texture2D" uid="uid://dglk1v2h1jxtc" path="res://images/UpgradeIcon/upgrades/gemup.png" id="2_6vhod"]
[ext_resource type="Script" path="res://unique_scripts/upgrades/gemsort_upp.gd" id="2_g5jhg"]

[sub_resource type="LabelSettings" id="LabelSettings_3g6cb"]
font_size = 42
font_color = Color(0, 0, 0, 1)
outline_size = 6

[node name="gemsort_upp" type="TextureRect" groups=["Persist"]]
custom_minimum_size = Vector2(75, 75)
offset_right = 75.0
offset_bottom = 75.0
texture = ExtResource("1_idpkr")
expand_mode = 1
script = ExtResource("2_g5jhg")
title = "Gem Sorting"
description = "Increases Kobold Income based on the amount of Gems"
cost = 150000
tier = 1

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 150.0
offset_bottom = 150.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_6vhod")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 24.0
offset_top = 8.0
offset_right = 48.0
offset_bottom = 66.0
text = "S"
label_settings = SubResource("LabelSettings_3g6cb")

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
